# atomic

./: CHANGELOG.md  Cargo.toml  README.md  lib.rs
examples/: minimal.rs  signal.rs
tests/: unwindsafety.rs
