[package]
name = "slog-atomic"
version = "2.0.0-3.1"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Atomic run-time controllable drain for slog-rs"
keywords = ["slog", "logging", "log",  "atomic"]
license = "MPL-2.0"
documentation = "https://docs.rs/slog-atomic"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/atomic"
readme = "README.md"

[lib]
path = "lib.rs"

[dependencies]
slog = "~2.0.0-3"
crossbeam = "0.2.9"

[dev-dependencies]
lazy_static = "0.2.4"
nix = "0.8.0"
slog-term = "~2.0.0-3"
slog-json = "~2.0.0-3"
slog-async = "~2.0.0-3"
