[package]
name = "slog-atomic"
version = "3.0.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Atomic run-time controllable drain for slog-rs"
keywords = ["slog", "logging", "log",  "atomic"]
license = "MPL-2.0/MIT/Apache-2.0"
documentation = "https://docs.rs/slog-atomic"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/atomic"
readme = "README.md"

[lib]
path = "lib.rs"

[dependencies]
arc-swap = "1.0"
slog = "2"

[dev-dependencies]
lazy_static = "0.2.4"
nix = "0.8.0"
slog-term = "2"
slog-json = "2"
slog-async = "2"
